src/scss/kitchensink/_tabs.scss
.stir-tabs {
  margin-top: 2rem;

  [role="tablist"] {
    display: none;
  }

  [role="tab"] {
    text-align: center;
    border-width: 5px 0;
    border-style: solid;
    border-color: transparent;
    color: $heritage-green;
    cursor: pointer;

    &[aria-selected="true"] {
      color: $black;
      border-top-color: $energy-green;
      border-bottom-color: #ccc;
      background-color: #f6f5f4;
    }
    /* &[aria-selected="false"] {
			border-top-color: #ccc;
		} */
  }

  [role="tabpanel"] {
    &:focus {
      outline: 2px solid $heritage-green;
    }
    [data-behaviour="accordion"] h3 {
      padding: 0;
    }
    h2,
    h3 {
      margin-bottom: 0;
      &::after {
        content: none;
      }
    }
    > h2 {
      font-family: "Open Sans", Arial, Helvetica, sans-serif;
      color: $black;
      padding: 1rem 0;
      font-weight: 700;
      font-size: 1.625rem;
    }
    > h3 {
      font-size: 1.5rem;
    }
  }
  [role="region"] {
    padding: 1rem;
  }

  [role="tabpanel"],
  [role="region"] {
    background: #f6f5f4;
    p,
    li,
    td {
      font-size: 1rem;
    }
    [data-behaviour="accordion"] > h3 {
      padding: 0;
      margin: 0;
    }
  }

  /* accordion trigger */
  .pseudotab[aria-expanded] {
    cursor: pointer;
    font-size: 1rem;
    padding: 1rem;
    text-align: center;
    display: block;
    width: 100%;
    font-weight: 700;
    background-color: rgb(246, 245, 244);
    border-top: 5px solid $white;
    border-bottom: 5px solid rgb(246, 245, 244);

    &::after {
      float: right;
    }
  }
  .pseudotab[aria-expanded="true"],
  .pseudotab[aria-expanded]:hover,
  .pseudotab[aria-expanded]:focus-visible {
    border-top: 5px solid $energy-green;
    border-bottom: 5px solid #ccc;
  }
  .pseudotab[aria-expanded="false"]::after {
    content: "+";
  }
  .pseudotab[aria-expanded="true"]::after {
    content: "–";
  }

  /* needed because of WYSIWYG H3 styling specificity */
  .c-wysiwyg-content .stir-accordion > h3 {
    margin: 0;
    padding: 0;
  }
}

@media screen and (max-width: 63.999em) {
  .stir-tabs > div > h2 {
    margin: 0;
    padding: 0;
    font-family: "Open Sans", sans-serif;
    &::after {
      content: none;
    }
  }
}

@media screen and (min-width: 64em) {
  /* tabs outer wrapper */
  .c-course-tabs {
    width: 90%;
    max-width: 77.5rem;
    margin: 0 auto;
    margin-bottom: 0px;
    margin-bottom: 40px;

    &.c-course-tabs-white {
      .stir-tabs [role="tabpanel"] {
        background-color: #fff;
      }
      .stir-tabs [role="tab"][aria-selected="true"] {
        background-color: #fff;
      }
    }
  }

  .stir-tabs {
    [role="tablist"] {
      display: flex;
      flex-direction: row;
    }

    [role="tab"] {
      padding: 1.5rem 2rem;
    }
    [role="tab"][aria-selected] {
      border-bottom-width: 0;
    }

    [role="tabpanel"] {
      padding: 1rem 5rem;
      &[aria-hidden="true"] {
        display: none;
      }
    }

    > details {
      border: 0;
      summary {
        display: none;
      }
    }
  }
}

